# LexiLogic

./: .gitignore  README.md
Client_Python/: GameService_idl.py  PlayerService_idl.py  ProgramUtilities_idl.py  README.md  UIControllers_idl.py  player_callback_impl.py  pyproject.toml  requirements.txt  update_dispatcher.py
Client_Python/Client/: game.py  index.py  leaderboards.py  login.py  main_menu.py  match_history.py  profile.py
Client_Python/Core/: json_parser.py
Client_Python/Utilities/Reference_Objects/: GameDetail.py  LeaderBoard.py  Lobby.py  Player.py  PlayerGameDetail.py
Client_Python/corba_idl/BoggleApp/: GameService.idl  PlayerService.idl  ProgramUtilities.idl
Client_Python/org/: __init__.py
Client_Python/org/amalgam/: __init__.py
Client_Python/org/amalgam/ControllerException/: __init__.py
Client_Python/org/amalgam/Service/: __init__.py
Client_Python/org/amalgam/Service/GameServiceModule/: __init__.py
Client_Python/org/amalgam/Service/PlayerServiceModule/: __init__.py
Client_Python/org/amalgam/UIControllers/: __init__.py
Client_Python/org/amalgam/Utils/: __init__.py
Client_Python/org/amalgam/Utils/Exceptions/: __init__.py
Client_Python/org__POA/: __init__.py
Client_Python/org__POA/amalgam/: __init__.py
Client_Python/org__POA/amalgam/ControllerException/: __init__.py
Client_Python/org__POA/amalgam/Service/: __init__.py
Client_Python/org__POA/amalgam/UIControllers/: __init__.py
Client_Python/org__POA/amalgam/Utils/: __init__.py
Client_Python/org__POA/amalgam/Utils/Exceptions/: __init__.py
Client_Python/public/: index.py
(+2066 files in other folders)
